created sale landing page
(cherry picked from commit 07fd9342b2126b80b467d14c625afcd85a03972b)

--- a/app_custom_exercise/cartridges/app_custom_exercise/cartridge/templates/resources/common.properties
+++ b/app_custom_exercise/cartridges/app_custom_exercise/cartridge/templates/resources/common.properties
@@ -1,3 +1,6 @@
 label.show.more=Show more
 label.show.less=Show less
 label.discover=TRAVEL BETTER WITH SAMSONITE
+sale.landing.offer=limited timer offer
+sale.landing.bundle=bundle deals
+sale.landing.bag=bags & backpack
